--- a/RealWorldUnitTest.Web/Views/Product/Details.cshtml
+++ b/RealWorldUnitTest.Web/Views/Product/Details.cshtml
@@ -6,6 +6,9 @@
             <p><b>Name</b></p> @Model.Name
         </div>
         <div class="col-12">
+            <p><b>Category Name</b></p> @Model.Category?.Name
+        </div>
+        <div class="col-12">
             <p><b>Color</b></p> @Model.Color
         </div>
         <div class="col-12">
