--- a/RealWorldUnitTest.Web/Views/Product/Edit.cshtml
+++ b/RealWorldUnitTest.Web/Views/Product/Edit.cshtml
@@ -7,6 +7,12 @@
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
+     <div class="form-group">
+    <label asp-for="CategoryId" class="control-label">Category</label>
+     <select asp-for="CategoryId" class="form-control"
+            asp-items="@(ViewData["CategoryId"] as SelectList)">
+    </select>
+    </div>
     <div class="form-group">
         <label asp-for="Color"></label>
         <input asp-for="Color" class="form-control" />
