--- a/RealWorldUnitTest.Web/Views/Product/Index.cshtml
+++ b/RealWorldUnitTest.Web/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 <table class="table table-bordered table-hover table-responsive">
                     <thead>
                         <tr>
-                            <th>Name</th>
+                            <th>Product Name</th>
                             <th>Color</th>
                             <th>Stock</th>
                             <th>Price</th>
